# ngin

./: CMakeLists.txt  Doxyfile  README.md  build.sh
assets/material/: manifest.atl  sphere.nmat
assets/mesh/: manifest.atl  sphere.nmesh
assets/object/: manifest.atl  sphere.atl
c/: CMakeLists.txt
c/includes/nev/: animation.h  animator.h  assimp_glm_helpers.h  bone.h  component.h  constants.h  coroutine_manager.h  dict.h  fileutils.h  game.h  i_object.h  list.h  log.h  model.h  model_animation.h  model_drawer.h  model_loader.h  noise.h  object.h  point_ui.h  resources.h  scene.h  sound_manager.h  surface_data.h  surface_sdf.h  window.h
c/includes/nevc/: nevc.h
c/includes/nevf/: nevf.h
c/includes/ngin/: log.h  resources.h
c/resources/data/: resources.json
c/resources/nev/: scene_start.snorri
c/resources/nevf/: start.nevf
c/resources/shaders/: depth_2.gs  depth_2.vs  nev.include  sdf.vs
c/src/: animation.cpp  animator.cpp  game.cpp  main.cpp  surface_sdf.cpp
c/src/camera/: camera.cpp  camera.h
c/src/graphs/: graph_editor.h
c/src/light/: light.cpp  light.h
c/src/model/: model_drawer.cpp  model_fbx.cpp  model_fbx.h  model_primitive.cpp  model_primitive.h  model_sdf.cpp  model_sdf.h  model_text.cpp  model_text.h  model_ui.cpp  model_ui.h
c/src/physics/: body.cpp  body.h  body_collider.h  body_mesh.cpp  body_mesh.h  physics_manager.cpp  physics_manager.h
cmake/modules/: FindFreetype.cmake  FindIRRKLANG.cmake  FindOpenAL.cmake
configuration/: root_directory.h.in
docs/html/: annotated.html  annotated_dup.js  class_ngin_application-members.html  class_ngin_application.html  class_ngin_application.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  functions.html  functions_func.html  index.html  navtreedata.js  navtreeindex0.js
docs/html/search/: all_0.js  all_1.js  classes_0.js  functions_0.js  searchdata.js
docs/latex/: annotated.tex  class_ngin_application.tex  refman.tex
include/glm/gtx/: gradient_paint.hpp
include/nevc/: collection.h  dict.h  list.h
include/ngin/: window.h
includes/Headers/: Model.h
includes/kdt/: kdtree.h
includes/learnopengl/: filesystem.h  model.h
includes/nevc/: collection.h
includes/ngin/: component.h  constants.h  dict.h  drawer.h  event.h  game.cpp  game.h  i_object.h  lex.h  lighter.h  list.h  log.h  mesh.h  model.h  model_drawer.h  model_loader.h  ngin.h  noise.h  object.h  physics.h  point_ui.h  preferences.h  resources.h  scene.h  shader.h  sound_manager.h  surface_sdf.h  time.h  window.h
includes/ngin/collections/: list.h  nevf.h
includes/ngin/components/: camera.h  light.h  light_point.h  quad.h  skybox.h  types.cpp
includes/ngin/data/: mesh_data.h  mover_data.h  render_data.h  shader_data.h  texture_data.h  transform_data.h
includes/ngin/gl/: model.h  window.h
includes/ngin/gui/: font.h
includes/ngin/nevgl/: window.h
includes/ngin/nevobj/: component.h  object.h  scene.h
includes/ngin/node/: graph_state.h  i_node.h  i_node_connection.h  node.h  node_connection.h  node_graph.h  node_port.h
includes/ngin/nodes/: camera.h  camera_mover.h  i_drawer.h  light_directional.h  model_drawer.h  node_types.cpp  object.h  pass.h  screen.h  shader.h  shader_attributes.h  shader_drawer.h  transform.h
includes/ngin/resources/: mesh.h  shader.h  texture.h  vertex.h
includes/ngin/scene/: component.h  game.h  i_drawer.h  i_object.h  model_loader.h  object.h  point_ui.h  scene.h  scene_graph.h
includes/ngin/sound/: manager.h
includes/ngin/util/: fileutils.h
includes/ngin/utils/: fileutils.h  mathutils.h
includes/snorri/: animation.h  animator.h  bone.h  collection.h  component.h  constants.h  coroutine.h  coroutine_manager.h  dict.h  fileutils.h  game.h  i_object.h  list.h  model.h  model_animation.h  model_loader.h  object.h  point.h  point_ui.h  ray.h  resources.h  scene.h  surface_sdf.h  texture_2d.h  window.h
includes/snorri_graphs/: graph_data.h  graph_drawer.h  graph_generator.h  graph_pass_biomes.h  graph_pass_coast.h  graph_pass_elevation.h  graph_pass_moisture.h  graph_pass_noisy_edges.h  graph_pass_rivers.h  graph_pass_roads.h  graph_pass_towns.h  graph_pass_water.h
includes/soil/: SOIL.c  image_DXT.c
lib/: freetype.lib
presets/: game.blend  game.blend1
python/blendgin/addon/: nevf_addon.py
python/nevsc/: api.py  test.py
python/ngin/: api.py
resources/audio/: manifest.lexf
resources/data/: env.lexf  game.atl  game.lexf  manifest.atl  render.atl  scene_start.json
resources/fbx/: player.fbx  player.mtl  sphere.blend  sphere.blend1  sphere.fbx
resources/font/: manifest.lexf
resources/mesh/: cube.nmsh  manifest.atl  manifest.lexf  plane.nmsh
resources/meshes/: manifest.nevf  quad.mesh
resources/nevf/: game.nevf  resources.nevf  scene_start.nevf
resources/node/: graph.lexf
resources/object/: manifest.atl  scene.nobj
resources/shader/: envmap.nfrg  forward.nfrg  fxaa.nfrg  gui.nfrg  header.ninc  manifest.atl  manifest.lexf  shadowmap.nvtx  ssao.ncmp  ssao_blur.ncmp  ssao_geometry.nfrg  ssao_lighting.nfrg  ssr.nfrg  test.ncmp
resources/shaders/: depth.include  depth.vs  depth_2.fs  manifest.nevf  sdf.fs  textured_1.fs  transparent.vs  ui_1.fs  ui_1.vs
resources/snorri/: map_generator.snorri  scene_start.snorri
resources/texture/: manifest.lexf
resources/vox/: test.nvox  test.vox
src/: animation.cpp  animator.cpp  cubemaps_environment_mapping.cpp  game.cpp  main.cpp  main_graph.cpp  ngin.cpp  ngin_render.cpp  njobs.cpp  njobs_stealer.cpp  surface_sdf.cpp
src/camera/: camera.cpp  camera.h
src/graphs/: graph_editor.cpp  graph_editor.h
src/light/: light.cpp  light.h
src/model/: model_drawer.cpp  model_fbx.cpp  model_fbx.h  model_primitive.cpp  model_primitive.h  model_sdf.cpp  model_sdf.h  model_text.cpp  model_text.h  model_ui.cpp  model_ui.h
src/ngin/: constants.h  drawer.h  engine.h  game.cpp  game.h  gl.h  lex.h  lighter.h  log.h  ngin.h  resources.h  window.h
src/physics/: body.cpp  body.h  body_box.cpp  body_box.h  body_collider.h  body_mesh.cpp  body_mesh.h  physics_manager.cpp
src/ssao/: ssao.cpp
(+214 files in other folders)
